@startuml
skinparam classAttributeIconSize 0

class Executeur {
  +lancerTransformation(GroupeClass) : File
} 

package "Couche Analyse" {
	abstract class Parseur {
	  +cheminEntree : String
	  +extraireClasses() : GroupeClasse
	}
	
	abstract class ClasseAbstraite {
	  +nom : {ID} String
	  +type : {ID} Type
	  +getClasse() : ClasseAbstraite
	}

	class ClasseUML {
	  +nom : {ID} String
	  +estAbstraite : Boolean
	  +estInterface : Boolean
	  ---
	  +getAttributs() : List<Attribut>
	  +getOperations() : List<Operation>
	  +getRelations() : List<(ClasseUML,ClasseUML,Relation)>
	}

	ClasseUML "1" o-- "0..*" Attribut
	ClasseUML "1" o-- "0..*" Operation
	ClasseUML "2" o-- "0..*" Relation  : "{Liste des relations sortantes}"

	enum Visibilite {
	  PUBLIC
	  PRIVE
	  PROTEGE
	  PAQUETAGE
	}

	class Attribut {
	  +nom : {ID} String
	  +type : String
	  +visibilite : Visibilite
	}

	class Operation {
	  +nom : {ID} String
	  +typeRetour : String
	  +visibilite : Visibilite
	}

	class Relation {
	  +cardinaliteSource : int 
	  +roleSource : String 
	  +cardinaliteCible : int 
	  +roleCible : String
	}
	

	ClasseAbstraite <|--  ClasseUML : {Exclusif sauf GroupeClasse, incomplet}
	ClasseAbstraite <|-- "ClasseCpp" 
	ClasseAbstraite <|-- GroupeClasse : {Définit un ensemble de Classes}

	class ClasseCpp{}

	ClasseAbstraite "0..1" --* "1..*" GroupeClasse
	
	class GroupeClasse {
	 +getListeClasses() : List<ClasseAbstraite>
	}
	
	enum Type {
	  UML
	  CPP
	}
	
	enum Position {
	 NOTES_CLASSE
	 NOTES_OPERATION
	 NOTES_RELATION
	 NOTES_GRPCLASSE
	}
	
	interface Notes {
	 +emplacement : Position 
	 +contenu : String
	}
	GroupeClasse ..|> Notes	
	ClasseUML ..|> Notes
	Relation ..|> Notes
	Operation ..|> Notes

	Parseur "1" *-- "0..*" GroupeClasse
}

package "Couche Generation" {
    abstract class Generateur {
        +cheminSortie : String
        +genererCode(GroupeClasse) : File 
    }

    class GenerateurJava {
        +genererCode(GroupeClasse) : File
    }

    class GenerateurCpp {
        +genererCode(GroupeClasse) : File
    }

    class GenerateurPython {
        +genererCode(GroupeClasse) : File
    }
    
    class GenerateurRust {
        +genererCode(GroupeClasse) : File
    }
    
    interface Commentaire {
        +contenu : String
        +genererBlocCommentaire() : String
    }
    
    Generateur ..|> Commentaire  
}

Executeur "1"  o-- "0..1" Parseur
Executeur "1" o-- "0..*" Generateur

Generateur <|-- GenerateurJava
Generateur <|-- GenerateurCpp
Generateur <|-- GenerateurPython
Generateur <|-- GenerateurRust
@enduml
